--- a/SimpleMoviesExampleUsingMVVM/Views/MoviesWindowView.xaml
+++ b/SimpleMoviesExampleUsingMVVM/Views/MoviesWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SimpleMoviesExampleUsingMVVM.Views.MoviesView"
+﻿<Window x:Class="SimpleMoviesExampleUsingMVVM.Views.MoviesWindowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,10 +7,11 @@
              xmlns:viewModels="clr-namespace:SimpleMoviesExampleUsingMVVM.ViewModels"
              xmlns:converters1="clr-namespace:SimpleMoviesExampleUsingMVVM.Views.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance viewModels:MoviesViewModel, IsDesignTimeCreatable=True }">
+             d:DesignHeight="980" d:DesignWidth="1440"
+             d:DataContext="{d:DesignInstance viewModels:MoviesViewModel, IsDesignTimeCreatable=True }"
+             Title="SimpleMoviesExampleUsingMVVM">
 
-    <UserControl.Resources>
+    <Window.Resources>
         <converters1:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters1:StringImageToSourceConverter x:Key="StringImageToSourceConverter"/>
 
@@ -20,7 +21,7 @@
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
 
-    </UserControl.Resources>
+    </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -102,4 +103,4 @@
 
 
     </Grid>
-</UserControl>
+</Window>
