--- a/SimpleMoviesExampleUsingMVVM/Views/MoviesWindowView.xaml
+++ b/SimpleMoviesExampleUsingMVVM/Views/MoviesWindowView.xaml
@@ -2,10 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SimpleMoviesExampleUsingMVVM.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:SimpleMoviesExampleUsingMVVM.ViewModels"
              xmlns:converters1="clr-namespace:SimpleMoviesExampleUsingMVVM.Views.Converters"
+             xmlns:views="clr-namespace:SimpleMoviesExampleUsingMVVM.Views"
              mc:Ignorable="d" 
              d:DesignHeight="980" d:DesignWidth="1440"
              d:DataContext="{d:DesignInstance viewModels:MoviesViewModel, IsDesignTimeCreatable=True }"
@@ -61,34 +61,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
 
-            <!--Texts -->
-            <Grid DataContext="{Binding SelectedMovie}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="100*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="5"/>
-                    <RowDefinition Height="40"/>
-                    <RowDefinition Height="1"/>
-                    <RowDefinition Height="24"/>
-                    <RowDefinition Height="10"/>
-                    <RowDefinition/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="20"/>
-                </Grid.RowDefinitions>
-
-                <!--Binding-->
-                <TextBlock Text="{Binding Title}"  Grid.Column="2" Grid.Row="1" Margin="10,0,0,0" FontSize="29.333" FontWeight="Bold"/>
-                <TextBlock Text="{Binding Director}" Grid.Column="2" Grid.Row="3" Margin="10,0,0,0" FontSize="16" FontStyle="Italic"/>
-                <TextBlock Text="{Binding Description}" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" TextWrapping="Wrap" FontSize="18.667"/>
-                <local:RatingControl RatingValue="{Binding Rating}" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" />
-            </Grid>
+            <views:MovieDetailView DataContext="{Binding SelectedMovie}"/>
 
             <!--Commands-->
             <Button x:Name="PreviousMovieButton" Style="{StaticResource ResourceKey=TransparentButtonStyle}" Grid.Row="1"  HorizontalAlignment="Left"  Command="{Binding PreviousMovieCommand}" Visibility="{Binding ElementName=PreviousMovieButton, Path=IsEnabled, Converter={StaticResource ResourceKey=BoolToVisibilityConverter}}">
